ready to retrieve and get key for ransom
