# put_in_server/ransomil-api/app/Models/keyAndPass.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class keyAndPass extends Model
+{
+    use HasFactory;
+    protected $table = 'key_and_passes';
+    protected $fillable = [
+        'id',
+        'key',
+        'password',
+    ];
+}
