# put_in_server/ransomil-api/routes/api.php
@@ -19,11 +19,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::get('/', function()
-{
-    return response()->json([
-        'message' => 'Welcome to the Laravel API'
-    ]);
-});
+Route::get('/key', [HomeController::class, 'generateKey']);
 
-Route::get('/test', [HomeController::class, 'index']);
+Route::get('/get/key', [HomeController::class, 'getKeyByPass']);
